--- a/index.html
+++ b/index.html
@@ -64,43 +64,43 @@
         }
 
         .priority-buttons,
-        .demand-buttons,
-        .chance-buttons,
-        .Introduction-buttons,
-        .delivery-buttons,
-        .menu-buttons {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
+.demand-buttons,
+.chance-buttons,
+.Introduction-buttons,
+.delivery-buttons,
+.menu-buttons {
+    display: flex;
+    flex-wrap: wrap; /* 折り返しOKにする */
+    gap: 10px;
+    margin-bottom: 20px;
+}
 
-        .priority-buttons button,
-        .demand-buttons button,
-        .chance-buttons button,
-        .Introduction-buttons button,
-        .delivery-buttons button,
-        .menu-buttons button {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            background-color: #f7f7f7;
-            cursor: pointer;
-            box-sizing: border-box;
-            text-align: center;
-            white-space: nowrap;
-        }
+.priority-buttons button,
+.demand-buttons button,
+.chance-buttons button,
+.Introduction-buttons button,
+.delivery-buttons button,
+.menu-buttons button {
+    width: calc(50% - 5px); /* 2列にする（gapを考慮） */
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f7f7f7;
+    cursor: pointer;
+    box-sizing: border-box;
+    text-align: center;
+    white-space: nowrap;
+}
 
-        .priority-buttons button.active,
-        .demand-buttons button.active,
-        .chance-buttons button.active,
-        .Introduction-buttons button.active,
-        .delivery-buttons button.active,
-        .menu-buttons button.active {
-            background-color: #444;
-            color: #fff;
-        }
+.priority-buttons button.active,
+.demand-buttons button.active,
+.chance-buttons button.active,
+.Introduction-buttons button.active,
+.delivery-buttons button.active,
+.menu-buttons button.active {
+    background-color: #444;
+    color: #fff;
+}
 
         .date-inputs input[type="datetime-local"] {
             width: calc(100% - 22px);
@@ -287,47 +287,105 @@
 
         <div class="label">Q2. 顎とおでこ、印象的なのは？</div>
         <div class="demand-buttons">
-            <button type="button" id="onedemand" data-label="A" onclick="selectdemand(this)">おでこが広い</button>
-            <button type="button" id="twodemand" data-label="A" onclick="selectdemand(this)"> おでこが狭い</button>
-            <button type="button" id="threedemand" data-label="A" onclick="selectdemand(this)">顎がシャープ</button>
-            <button type="button" id="fourdemand" data-label="A" onclick="selectdemand(this)">生え際が直線</button>
-            <button type="button" id="fivedemand" data-label="A" onclick="selectdemand(this)">丸い額</button>
-            <button type="button" id="sixdemand" data-label="A" onclick="selectdemand(this)">富士額なおでこ</button>
+            <button type="button" id="onedemand" data-label="A" onclick="selectdemand(this)">おでこが狭い</button>
+            <button type="button" id="twodemand" data-label="B" onclick="selectdemand(this)"> おでこが広い</button>
+            <button type="button" id="threedemand" data-label="C" onclick="selectdemand(this)">生え際が直線</button>
+            <button type="button" id="fourdemand" data-label="D" onclick="selectdemand(this)">顎がシャープ</button>
+            <button type="button" id="fivedemand" data-label="E" onclick="selectdemand(this)">丸い額</button>
+            <button type="button" id="sixdemand" data-label="F" onclick="selectdemand(this)">富士額なおでこ</button>
         </div>
 
         <div class="label">Q3. 顔の骨格・見た目は？</div>
         <div class="chance-buttons">
             <button type="button" id="onechance" data-label="A" onclick="selectchance(this)">柔らか</button>
-            <button type="button" id="twochance" data-label="A" onclick="selectchance(this)">丸み</button>
-            <button type="button" id="threechance" data-label="A" onclick="selectchance(this)">潤い感 </button>
-            <button type="button" id="fourchance" data-label="A" onclick="selectchance(this)">直線・骨っぽい</button>
-            <button type="button" id="fivechance" data-label="A" onclick="selectchance(this)">艶感 </button>
-            <button type="button" id="sixchance" data-label="A" onclick="selectchance(this)">弾力感</button>
+            <button type="button" id="twochance" data-label="B" onclick="selectchance(this)">丸み</button>
+            <button type="button" id="threechance" data-label="C" onclick="selectchance(this)">潤い感 </button>
+            <button type="button" id="fourchance" data-label="D" onclick="selectchance(this)">直線・骨っぽい</button>
+            <button type="button" id="fivechance" data-label="E" onclick="selectchance(this)">品格 </button>
+            <button type="button" id="sixchance" data-label="F" onclick="selectchance(this)">つや感</button>
         </div>
 
         <div class="info-textmemo">■ STEP 2：パーツの特徴</div>
-        <div class="label">過去施術<br>(過去にサロンで受けたことがある施術)</div>
+        <div class="label">Q4. 目の形は？</div>
         <div class="Introduction-buttons">
-            <button type="button" id="oneIntroduction" data-label="A"
-                onclick="selectIntroduction(this)">ネイルサロンに初めて来た(過去施術)</button>
-            <button type="button" id="twoIntroduction" data-label="A" onclick="selectIntroduction(this)">ケア(過去施術)
-            </button>
-            <button type="button" id="threeIntroduction" data-label="A"
-                onclick="selectIntroduction(this)">カラーリング(過去施術)</button>
-            <button type="button" id="fourIntroduction" data-label="A" onclick="selectIntroduction(this)">スカルプチャー(過去施術)
-            </button>
-            <button type="button" id="fiveIntroduction" data-label="A" onclick="selectIntroduction(this)">ジェルネイル(過去施術)
-            </button>
-            <button type="button" id="sixIntroduction" data-label="A" onclick="selectIntroduction(this)">フット(過去施術)
-            </button>
-            <button type="button" id="sevenIntroduction" data-label="A" onclick="selectIntroduction(this)">その他(過去施術)
-            </button>
+            <button type="button" id="oneIntroduction" data-label="A" onclick="selectIntroduction(this)">丸くてパッチリ</button>
+            <button type="button" id="twoIntroduction" data-label="B" onclick="selectIntroduction(this)">優しい目アーモンド型</button>
+            <button type="button" id="threeIntroduction" data-label="C" onclick="selectIntroduction(this)">二重</button>
+            <button type="button" id="fourIntroduction" data-label="D" onclick="selectIntroduction(this)">切れ長・シャープ</button>
+            <button type="button" id="fiveIntroduction" data-label="E" onclick="selectIntroduction(this)">切れ長・シャープ</button>
+            <button type="button" id="sixIntroduction" data-label="F" onclick="selectIntroduction(this)">たれ目</button>
         </div>
 
-        <div class="label">薬品/ネイルでのアレルギー</div>
+        <div class="label">Q5. 鼻の印象は？</div>
         <div class="delivery-buttons">
-            <button type="button" id="onedelivery" data-label="A" onclick="selectdelivery(this)">薬品アレルギー有り</button>
-            <button type="button" id="twodelivery" data-label="A" onclick="selectdelivery(this)">薬品アレルギー無し</button>
+            <button type="button" id="onedelivery" data-label="A" onclick="selectdelivery(this)">小さめ・丸め</button>
+            <button type="button" id="twodelivery" data-label="B" onclick="selectdelivery(this)">低め・丸め</button>
+            <button type="button" id="onedelivery" data-label="C" onclick="selectdelivery(this)">立体的</button>
+            <button type="button" id="twodelivery" data-label="D" onclick="selectdelivery(this)">大きめ・高い</button>
+            <button type="button" id="onedelivery" data-label="E" onclick="selectdelivery(this)">筋の通った</button>
+            <button type="button" id="twodelivery" data-label="F" onclick="selectdelivery(this)">大きめ・丸め</button>
+        </div>
+
+        <div class="label">Q6. 口元は？</div>
+        <div class="Introduction-buttons">
+            <button type="button" id="oneIntroduction" data-label="A" onclick="selectIntroduction(this)">大きくて薄い</button>
+            <button type="button" id="twoIntroduction" data-label="B" onclick="selectIntroduction(this)">真ん中にボリュームがある</button>
+            <button type="button" id="threeIntroduction" data-label="C" onclick="selectIntroduction(this)">大きめで華やか</button>
+            <button type="button" id="fourIntroduction" data-label="D" onclick="selectIntroduction(this)">薄い口唇</button>
+            <button type="button" id="fiveIntroduction" data-label="E" onclick="selectIntroduction(this)">バランスが良い</button>
+            <button type="button" id="sixIntroduction" data-label="F" onclick="selectIntroduction(this)">唇が厚い</button>
+        </div>
+
+        <div class="info-textmemo">■ STEP 3：印象・雰囲気</div>
+        <div class="label">Q7. 周囲に言われるのは？</div>
+        <div class="Introduction-buttons">
+            <button type="button" id="oneIntroduction" data-label="A" onclick="selectIntroduction(this)">可愛い・愛嬌がある</button>
+            <button type="button" id="twoIntroduction" data-label="B" onclick="selectIntroduction(this)">優しい・親しみやすい</button>
+            <button type="button" id="threeIntroduction" data-label="C" onclick="selectIntroduction(this)">元気が出る・美人</button>
+            <button type="button" id="fourIntroduction" data-label="D" onclick="selectIntroduction(this)">大人っぽい・洗練されてる</button>
+            <button type="button" id="fiveIntroduction" data-label="E" onclick="selectIntroduction(this)">品がある・エレガント</button>
+            <button type="button" id="sixIntroduction" data-label="F" onclick="selectIntroduction(this)">魅惑的・華やか</button>
+        </div>
+
+        <div class="info-textmemo">■ STEP 4：写真写り・自己分析</div>
+        <div class="label">Q8. 盛れる角度は？</div>
+        <div class="Introduction-buttons">
+            <button type="button" id="oneIntroduction" data-label="A" onclick="selectIntroduction(this)">笑顔</button>
+            <button type="button" id="twoIntroduction" data-label="B" onclick="selectIntroduction(this)">斜め横</button>
+            <button type="button" id="threeIntroduction" data-label="C" onclick="selectIntroduction(this)">正面</button>
+            <button type="button" id="fourIntroduction" data-label="D" onclick="selectIntroduction(this)">斜め・真横</button>
+            <button type="button" id="fiveIntroduction" data-label="E" onclick="selectIntroduction(this)">伏し目・目線外し</button>
+            <button type="button" id="sixIntroduction" data-label="F" onclick="selectIntroduction(this)">上目遣い</button>
+        </div>
+
+        <div class="label">Q9. 似合う服は？</div>
+        <div class="Introduction-buttons">
+            <button type="button" id="oneIntroduction" data-label="A" onclick="selectIntroduction(this)">パステル・可愛い系</button>
+            <button type="button" id="twoIntroduction" data-label="B" onclick="selectIntroduction(this)">無地・素材感</button>
+            <button type="button" id="threeIntroduction" data-label="C" onclick="selectIntroduction(this)">シンプル・スッキリ</button>
+            <button type="button" id="fourIntroduction" data-label="D" onclick="selectIntroduction(this)">キレイめ・大人カッコイイ</button>
+            <button type="button" id="fiveIntroduction" data-label="E" onclick="selectIntroduction(this)">フェミニン・クラシカル</button>
+            <button type="button" id="sixIntroduction" data-label="F" onclick="selectIntroduction(this)">セクシー・上品な可愛い系</button>
+        </div>
+
+        <div class="label">Q10. SNSアイコンにするなら？</div>
+        <div class="Introduction-buttons">
+            <button type="button" id="oneIntroduction" data-label="A" onclick="selectIntroduction(this)">可愛い笑顔アップ</button>
+            <button type="button" id="twoIntroduction" data-label="B" onclick="selectIntroduction(this)">遠目の雰囲気</button>
+            <button type="button" id="threeIntroduction" data-label="C" onclick="selectIntroduction(this)">爽やか美人風</button>
+            <button type="button" id="fourIntroduction" data-label="D" onclick="selectIntroduction(this)">横向きモデル風</button>
+            <button type="button" id="fiveIntroduction" data-label="E" onclick="selectIntroduction(this)">世界観重視</button>
+            <button type="button" id="sixIntroduction" data-label="F" onclick="selectIntroduction(this)">フラワーと私</button>
+        </div>
+
+        <div class="label">Q11. セルフケアで重視したいのは？</div>
+        <div class="Introduction-buttons">
+            <button type="button" id="oneIntroduction" data-label="A" onclick="selectIntroduction(this)">ふんわり癒し・可愛さ</button>
+            <button type="button" id="twoIntroduction" data-label="B" onclick="selectIntroduction(this)">透明感・くすみケア</button>
+            <button type="button" id="threeIntroduction" data-label="C" onclick="selectIntroduction(this)">若々しさ・健康的</button>
+            <button type="button" id="fourIntroduction" data-label="D" onclick="selectIntroduction(this)">スッキリ引き締め感</button>
+            <button type="button" id="fiveIntroduction" data-label="E" onclick="selectIntroduction(this)">艶・ハリ感</button>
+            <button type="button" id="sixIntroduction" data-label="F" onclick="selectIntroduction(this)">女性らしさメリハリ</button>
         </div>
 
         <button class="submit-button" onclick="submitForm()">アンケート送信</button> <!-- フォーム送信ボタン -->
