--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 .delivery-buttons,
 .menu-buttons {
     display: flex;
-    flex-wrap: wrap; /* 折り返しOKにする */
+    flex-wrap: wrap;
     gap: 10px;
     margin-bottom: 20px;
 }
@@ -81,7 +81,7 @@
 .Introduction-buttons button,
 .delivery-buttons button,
 .menu-buttons button {
-    width: calc(50% - 5px); /* 2列にする（gapを考慮） */
+    width: calc(50% - 5px);
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -89,7 +89,13 @@
     cursor: pointer;
     box-sizing: border-box;
     text-align: center;
-    white-space: nowrap;
+
+    /** ↓ ここがポイント！ ↓ **/
+    white-space: normal;       /* テキストを折り返せるように */
+    word-break: break-word;    /* 長い単語もちゃんと改行 */
+    font-size: 14px;           /* フォントサイズ少し控えめに */
+    line-height: 1.4;          /* 行間をちょい余裕持たせる */
+    height: auto;              /* 高さ自動にしてテキスト量に対応 */
 }
 
 .priority-buttons button.active,
