--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
     box-sizing: border-box;
     text-align: center;
 
-    /** ↓ ここがポイント！ ↓ **/
-    white-space: normal;       /* テキストを折り返せるように */
-    word-break: break-word;    /* 長い単語もちゃんと改行 */
-    font-size: 14px;           /* フォントサイズ少し控えめに */
-    line-height: 1.4;          /* 行間をちょい余裕持たせる */
-    height: auto;              /* 高さ自動にしてテキスト量に対応 */
+    white-space: normal;
+    word-break: break-word;
+    font-size: 14px;
+    line-height: 1.4;
+    height: auto;
+
+    min-height: 60px; /* ← ここで高さをそろえる♪ */
 }
 
 .priority-buttons button.active,
