--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 .delivery-buttons,
 .menu-buttons {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column; /* ← これで縦並び */
     gap: 10px;
     margin-bottom: 20px;
 }
@@ -81,7 +81,6 @@
 .Introduction-buttons button,
 .delivery-buttons button,
 .menu-buttons button {
-    width: calc(50% - 5px);
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -89,14 +88,8 @@
     cursor: pointer;
     box-sizing: border-box;
     text-align: center;
-
-    white-space: normal;
-    word-break: break-word;
-    font-size: 14px;
-    line-height: 1.4;
-    height: auto;
-
-    min-height: 60px; /* ← ここで高さをそろえる♪ */
+    white-space: nowrap;
+    width: 100%; /* ← ボタン幅を親に合わせる場合はこれ */
 }
 
 .priority-buttons button.active,
