--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>予約フォーム</title> <!-- タイトルを「予約フォーム」に設定 -->
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Times New Roman", "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "MS P明朝", "MS Mincho", serif;
             background-color: #f7f7f7;
             display: flex;
             justify-content: center;
@@ -93,6 +93,7 @@
         .icon-buttons button,
         .selfcare-buttons button,
         .menu-buttons button {
+            font-family: "Times New Roman", "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "MS P明朝", "MS Mincho", serif;
             padding: 10px;
             font-size: 16px;
             /* ← 追加：フォントサイズを大きく */
@@ -132,6 +133,7 @@
         }
 
         .submit-button {
+            font-family: "Times New Roman", "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "MS P明朝", "MS Mincho", serif;
             width: 100%;
             padding: 15px;
             border: none;
@@ -191,6 +193,7 @@
 
         /* 基本スタイル */
         .info-text {
+            font-family: "Times New Roman", "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "MS P明朝", "MS Mincho", serif;
             margin: 20px 0;
             font-family: "Noto Sans JP", "Roboto", sans-serif;
             font-size: 14px;
@@ -233,6 +236,7 @@
         /* モバイル向け調整 */
         @media (max-width: 768px) {
             .info-text {
+                font-family: "Times New Roman", "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "MS P明朝", "MS Mincho", serif;
                 font-size: 13px;
                 padding: 15px;
                 max-width: 100%;
@@ -248,6 +252,7 @@
         }
 
         .info-textmemo {
+            font-family: "Times New Roman", "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "MS P明朝", "MS Mincho", serif;
             margin-top: 24px;
             margin-bottom: 16px;
             font-size: 14px;
@@ -272,6 +277,7 @@
         /* 携帯端末向けのレスポンシブデザイン */
         @media (max-width: 768px) {
             .info-textmemo {
+                font-family: "Times New Roman", "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "MS P明朝", "MS Mincho", serif;
                 font-size: 15.5px;
                 margin-top: 12px;
                 margin-bottom: 12px;
@@ -678,8 +684,7 @@
                 C: 0,
                 D: 0,
                 E: 0,
-                F: 0,
-                G: 0
+                F: 0
             };
 
             Object.values(selectedLabels).forEach(label => {
@@ -699,7 +704,7 @@
                 type: 'text',
                 text: `≪診断チャート≫\n\n【Q1】\n・${formData.priorityCount}\n\n【Q2】\n・${formData.demandCount}\n\n【Q3】\n・${formData.chanceCount}\n\n【Q4】\n・${formData.IntroductionCount}\n\n【Q5】\n・${formData.deliveryCount}\n\n【Q6】\n・${formData.mouthCount}\n\n【Q7】\n・${formData.surroundingsCount}\n\n【Q8】\n・${formData.angleCount}\n\n【Q9】\n・${formData.clothesCount}\n\n【Q10】\n・${formData.iconCount}\n\n【Q11】\n・${formData.selfcareCount}\n\n${labelSummary}`
             }]).then(() => {
-                alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
+                alert('アンケートご記入ありがとうございます。');
                 liff.closeWindow();
             }).catch((err) => {
                 console.error('メッセージの送信に失敗しました', err);
