--- a/index.html
+++ b/index.html
@@ -290,13 +290,13 @@
 
 <body>
     <div class="container">
-        <div class="info-text">あなたの“顔の印象”には、まだ知られていない魅力があります。<br>
-            「なんとなく、諦めている」 「写真に映る自分が好きじゃない」 「もっと自分に似合うケアや印象づくりが知りたい」<br>
-            と感じたことがあるなら、 この診断は、あなたのために作られたものです。<br>
-            顔の輪郭・パーツ・雰囲気・印象を多角的に見つめ直し、 6タイプの中からあなたの“美の軸”を発見！！<br>
-            直感で答えるだけで、 あなたの顔立ちが一番輝くケアや見せ方が分かります。<br>
-            『綺麗に整った自分が、未来の誰かの美しさを整える』 <br>
-            ＼ 美のバトンは、まずあなたから。診断スタート ／</div>
+        <div class="info-text">あなたの“顔の印象”には、<br>まだ知られていない魅力があります。<br>
+            「なんとなく、諦めている」<br>「写真に映る自分が好きじゃない」<br>「もっと自分に似合うケアや印象づくりが知りたい」<br>
+            と感じたことがあるなら、 <br>この診断は、あなたのために作られたものです。<br>
+            顔の輪郭・パーツ・雰囲気・印象を多角的に見つめ直し、<br>6タイプの中からあなたの“美の軸”を発見！！<br>
+            直感で答えるだけで、 あなたの顔立ちが<br>一番輝くケアや見せ方が分かります。<br>
+            『綺麗に整った自分が、<br>未来の誰かの美しさを整える』 <br>
+            美のバトンは、まずあなたから。<br>＼ 診断スタート ／</div>
         <h1 style="font-size:18px;">
             【ヨーヨー式 美顔スタイル診断チャート】<br>〜11の質問で導く、あなたの“美の軸”〜
         </h1>
