--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nメニュー\n・${formData.menu}\n\n【希望日時】\n・\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n〈お名前〉\n・${formData.name}\n\n〈電話番号〉\n・${formData.phone}\n\n〈メニュー〉\n・${formData.menu}\n\n【希望日時】\n〈第一希望日〉\n${formatDate(formData.dates[0])}\n\n〈第二希望日〉\n${formatDate(formData.dates[1])}\n\n〈第三希望日〉\n${formatDate(formData.dates[2])}\n\n〈メッセージ〉\n・${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
