--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
         .calendar th,
         .calendar td {
-            font-size: 12.5px;
+            font-size: 19.5px;
             /* ここでフォントサイズを変更 */
             text-align: center;
             padding: 1px;
@@ -267,16 +267,14 @@
         }
 
         .calendar th:first-child,
-        .calendar td:first-child {
-            width: 17%;
-            /* ここで時間列の幅を調整 */
-            font-size: 15.5px;
-            /* フォントサイズを変更 */
-            text-align: left;
-            /* 左寄せ */
-            padding-left: 6px;
-            /* 少しだけ左に寄せる */
-        }
+.calendar td:first-child {
+    width: 17%;
+    font-size: 15.5px;
+    text-align: left;
+    padding-left: 6px;
+    padding-top: 2px; /* ← 追加：少し下にずらす */
+    vertical-align: top; /* 必要に応じて top / middle / bottom を調整 */
+}
 
         .calendar th {
             background-color: #f7f7f7;
@@ -288,7 +286,7 @@
 
         .calendar td.selected {
             background-color: hsl(125, 100%, 60%);
-            color: #fff;
+            color: #ff2323;
         }
 
         .week-button-container {
