--- a/index.html
+++ b/index.html
@@ -254,13 +254,14 @@
 
         .calendar th,
         .calendar td {
-            font-size: 17.5px;
+            font-size: 15.5px;
             /* ここでフォントサイズを変更 */
             text-align: center;
             padding: 1px;
             cursor: pointer;
             vertical-align: top;
             width: auto;
+            padding-top: 3px; /* ← 追加：少し下にずらす */
             /* 通常のセルは自動調整 */
             box-sizing: border-box;
             border: 2px solid #696969;
