--- a/index.html
+++ b/index.html
@@ -260,41 +260,45 @@
     <div class="container">
         <h1>株式会社マリエス/Maum千葉店<br>カウンセリングシート</h1>
         <div class="info-text">以下全て入力後【アンケート送信】ボタンを押してください。</div>
-        <div class="label">ご来店日(例:西暦記載 ○年○月○日)</div>
+        <div class="label">お名前(漢字フルネーム)</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">お名前(漢字フルネーム)</div>
+        <div class="label">お名前(フリガナ)</div>
         <textarea id="message2" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">お名前(ふりがな)</div>
+        <div class="label">生年月日</div>
         <textarea id="message6" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">生年月日(例:西暦記載 ○年○月○日)</div>
+        <div class="label">郵便番号</div>
         <textarea id="message3" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">電話番号</div>
+        <div class="label">住所</div>
         <textarea id="message4" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">お住まい(都道府県/市区町村まで)</div>
+        <div class="label">電話番号</div>
         <textarea id="message5" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">ご職業</div>
+        <div class="label">来店のきっかけ</div>
         <div class="priority-buttons">
-            <button type="button" id="onepriority" onclick="selectpriority(this)"> 会社員（職業）</button>
-            <button type="button" id="twopriority" onclick="selectpriority(this)">パート・アルバイト（職業）</button>
-            <button type="button" id="threepriority" onclick="selectpriority(this)">学生（職業）</button>
-            <button type="button" id="fourpriority" onclick="selectpriority(this)">専業主婦（職業）</button>
-            <button type="button" id="fivepriority" onclick="selectpriority(this)">その他（職業）</button>
+            <button type="button" id="onepriority" onclick="selectpriority(this)">ホットペッパー</button>
+            <button type="button" id="twopriority" onclick="selectpriority(this)">Googleマップ</button>
+            <button type="button" id="threepriority" onclick="selectpriority(this)">Web検索</button>
+            <button type="button" id="fourpriority" onclick="selectpriority(this)">ホームページ</button>
+            <button type="button" id="fivepriority" onclick="selectpriority(this)">紹介</button>
+            <button type="button" id="sixpriority" onclick="selectpriority(this)">その他　(単一選択)</button>
         </div>
 
+        <div class="label">要望欄</div>
+        <textarea id="message6" rows="4" placeholder="メッセージを入力してください"></textarea>
+
         <div class="label">注意事項</div>
-        <div class="info-text">・爪に色調変化や他の異常があった時は必ずご連絡ください。
-            ・人工爪装着後、爪にひびや裂、リフティング等が起こった場合はすぐにご来店ください。
-            ・お直しは7日以内にご連絡いただき一回のみ無料（対象外除く）とさせていただきます。（期間外は有料）
-            ・退店後のデザイン、カラー変更は料金が発生いたしますのでご納得頂けない場合はその場でお伝え下さい。
-            ・ご予約のキャンセルは予約日の2日前までにご連絡下さい。前日等は直近2週間のご予約はお断りさせて頂きます。
-            ・15分以上の遅刻をされますとキャンセルとさせていただきます。
-            ・遅刻よるコース変更：変更したコースの金額を頂戴します。
+        <div class="info-text">・爪に色調変化や他の異常があった時は必ずご連絡ください。<br><br>
+            ・人工爪装着後、爪にひびや裂、リフティング等が起こった場合はすぐにご来店ください。<br><br>
+            ・お直しは7日以内にご連絡いただき一回のみ無料（対象外除く）とさせていただきます。（期間外は有料）<br><br>
+            ・退店後のデザイン、カラー変更は料金が発生いたしますのでご納得頂けない場合はその場でお伝え下さい。<br><br>
+            ・ご予約のキャンセルは予約日の2日前までにご連絡下さい。前日等は直近2週間のご予約はお断りさせて頂きます。<br><br>
+            ・15分以上の遅刻をされますとキャンセルとさせていただきます。<br><br>
+            ・遅刻よるコース変更：変更したコースの金額を頂戴します。<br><br>
             ・当日・無断キャンセルが2回以上あった場合、今後のご予約はお断りさせていただきます。
         </div>
         <div class="budgety-buttons">
@@ -378,19 +382,19 @@
 
             // フォームデータのチェック
             if (!formData.message) {
-                alert('ご来店日を入力してください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.message2) {
                 alert('お名前(漢字フルネーム)を入力してください。');
                 return;
             }
 
             // フォームデータのチェック
+            if (!formData.message2) {
+                alert('お名前(フリガナ)を入力してください。');
+                return;
+            }
+
+            // フォーデータのチェック
             if (!formData.message6) {
-                alert('お名前(ふりがな)を入力してください。');
+                alert('お名前(フリガナ)を入力してください。');
                 return;
             }
 
@@ -408,7 +412,7 @@
 
             // フォームデータのチェック
             if (!formData.message5) {
-                alert('お住まいを入力してください。');
+                alert('住所を入力してください。');
                 return;
             }
 
@@ -427,7 +431,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【ご来店日】\n・${formData.message}\n\n【お名前(漢字)】\n・${formData.message2}\n\n【お名前(ふりがな)】\n・${formData.message6}\n\n【生年月日】\n・${formData.message3}\n\n【電話番号】\n・${formData.message4}\n\n【お住まい】\n・${formData.message5}\n\n【ご職業】\n・${formData.priorityCount}\n\n【重要項目の同意】\n・${formData.budgetyCount}`
+                text: `≪アンケート≫\n【ご来店日】\n・${formData.message}\n\n【お名前(漢字フルネーム)】\n・${formData.message2}\n\n【お名前(フリガナ)】\n・${formData.message6}\n\n【生年月日】\n・${formData.message3}\n\n【郵便番号】\n・${formData.message4}\n\n【住所】\n・${formData.message5}\n\n【電話番号】\n・${formData.priorityCount}\n\n【重要項目の同意】\n・${formData.budgetyCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('カウンセリングシートのご記入と、重要事項へのご同意、ありがとうございました。');
