--- a/index.html
+++ b/index.html
@@ -267,16 +267,16 @@
         <textarea id="message2" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">生年月日</div>
-        <textarea id="message6" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
-
-        <div class="label">郵便番号</div>
         <textarea id="message3" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">住所</div>
+        <div class="label">郵便番号</div>
         <textarea id="message4" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">電話番号</div>
+        <div class="label">住所</div>
         <textarea id="message5" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
+
+        <div class="label">電話番号</div>
+        <textarea id="message6" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">来店のきっかけ</div>
         <div class="priority-buttons">
@@ -289,7 +289,7 @@
         </div>
 
         <div class="label">要望欄</div>
-        <textarea id="message6" rows="4" placeholder="メッセージを入力してください"></textarea>
+        <textarea id="message7" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <div class="label">注意事項</div>
         <div class="info-text">・爪に色調変化や他の異常があった時は必ずご連絡ください。<br><br>
@@ -366,6 +366,7 @@
             const message4 = document.getElementById('message4').value;
             const message5 = document.getElementById('message5').value;
             const message6 = document.getElementById('message6').value;
+            const message7 = document.getElementById('message7').value;
             priorityCount: priorityCount;
             budgetyCount: budgetyCount;
 
@@ -376,6 +377,7 @@
                 message4,
                 message5,
                 message6,
+                message7,
                 priorityCount,
                 budgetyCount,
             };
@@ -388,12 +390,6 @@
 
             // フォームデータのチェック
             if (!formData.message2) {
-                alert('お名前(フリガナ)を入力してください。');
-                return;
-            }
-
-            // フォーデータのチェック
-            if (!formData.message6) {
                 alert('お名前(フリガナ)を入力してください。');
                 return;
             }
@@ -416,6 +412,12 @@
                 return;
             }
 
+            // フォーデータのチェック
+            if (!formData.message6) {
+                alert('お名前(フリガナ)を入力してください。');
+                return;
+            }
+
             // フォームデータのチェック
             if (!formData.priorityCount) {
                 alert('ご職業をご選択ください。');
@@ -431,7 +433,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【ご来店日】\n・${formData.message}\n\n【お名前(漢字フルネーム)】\n・${formData.message2}\n\n【お名前(フリガナ)】\n・${formData.message6}\n\n【生年月日】\n・${formData.message3}\n\n【郵便番号】\n・${formData.message4}\n\n【住所】\n・${formData.message5}\n\n【電話番号】\n・${formData.priorityCount}\n\n【重要項目の同意】\n・${formData.budgetyCount}`
+                text: `≪アンケート≫\n【ご来店日】\n・${formData.message}\n\n【お名前(漢字フルネーム)】\n・${formData.message2}\n\n【お名前(フリガナ)】\n・${formData.message6}\n\n【生年月日】\n・${formData.message3}\n\n【郵便番号】\n・${formData.message4}\n\n【住所】\n・${formData.message5}\n\n【住所】\n・${formData.message6}\n\n【要望欄】\n・${formData.message7}\n\n【来店のきっかけ】\n・${formData.priorityCount}\n\n【重要項目の同意】\n・${formData.budgetyCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('カウンセリングシートのご記入と、重要事項へのご同意、ありがとうございました。');
