--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【ご来店日】\n・${formData.message}\n\n【お名前(漢字フルネーム)】\n・${formData.message2}\n\n【お名前(フリガナ)】\n・${formData.message6}\n\n【生年月日】\n・${formData.message3}\n\n【郵便番号】\n・${formData.message4}\n\n【住所】\n・${formData.message5}\n\n【住所】\n・${formData.message6}\n\n【要望欄】\n・${formData.message7}\n\n【来店のきっかけ】\n・${formData.priorityCount}\n\n【重要項目の同意】\n・${formData.budgetyCount}`
+                text: `≪アンケート≫\n【お名前(漢字フルネーム)】\n・${formData.message}\n\n【お名前(フリガナ)】\n・${formData.message2}\n\n【生年月日】\n・${formData.message3}\n\n【郵便番号】\n・${formData.message4}\n\n【住所】\n・${formData.message5}\n\n【電話番号】\n・${formData.message6}\n\n【来店のきっかけ】\n・${formData.priorityCount}\n\n【要望欄】\n・${formData.message7}\n\n【重要項目の同意】\n・${formData.budgetyCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('カウンセリングシートのご記入と、重要事項へのご同意、ありがとうございました。');
