--- a/index.html
+++ b/index.html
@@ -1177,9 +1177,9 @@
                 irradiationsCount: irradiationsCount,
                 dates: selectedFullDate ? [selectedFullDate] : null, // 空チェック
                 message: document.getElementById('message').value.trim(),
-                message: document.getElementById('message2').value.trim(),
-                message: document.getElementById('message3').value.trim(),
-                message: document.getElementById('message4').value.trim()
+                message2: document.getElementById('message2').value.trim(),
+                message3: document.getElementById('message3').value.trim(),
+                message4: document.getElementById('message4').value.trim()
             };
 
             // フォームデータのチェック
@@ -1205,19 +1205,19 @@
 
             // フォームデータのチェック
             if (!formData.message2) {
-                alert('お名前を入力してください。');
+                alert('現在のお悩みはありますか？を入力してください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.message3) {
-                alert('生年月日を入力してください。');
+                alert('ご自身の理想のイメージはありますか？を入力してください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.message4) {
-                alert('電話番号を入力してください。');
+                alert('申し込みしたい理由を教えて下さい。を入力してください。');
                 return;
             }
 
