--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n\n【お悩み】\n・${formData.message2}\n\n【イメージ】\n・${formData.message3}\n\n【理由】\n・${formData.message4}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【相談フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n\nお悩み：\n・${formData.message2}\n\nイメージ：\n・${formData.message3}\n\n理由：\n・${formData.message4}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
