--- a/index.html
+++ b/index.html
@@ -314,6 +314,10 @@
             cursor: pointer;
         }
 
+        .week-button:hover {
+    background-color: #583962; /* ホバーで黒にチェンジ🖤 */
+}
+
         .month-button-container {
             display: flex;
             justify-content: space-between;
@@ -330,6 +334,10 @@
             border-radius: 4px;
             cursor: pointer;
         }
+
+        .month-button:hover {
+    background-color: #583962; /* ホバーで黒にチェンジ🖤 */
+}
 
         .current-month {
             font-size: 16px;
