--- a/index.html
+++ b/index.html
@@ -298,24 +298,31 @@
         }
 
         .week-button-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            margin-bottom: 10px;
-        }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
 
-        .week-button {
-            padding: 10px 20px;
-            background-color: #444444;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
+.week-button {
+    padding: 10px 20px;
+    background-color: #444444;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    transform-origin: center center;
+}
 
-        .week-button:hover {
-    background-color: #583962; /* ホバーで黒にチェンジ🖤 */
+.week-button:hover {
+    background-color: #583962;
+    transform: scale(1.15); /* ドーン！ってくらい拡大🔥 */
+}
+
+.week-button:active {
+    transform: scale(0.95); /* クリックした瞬間にギュッと縮む💥 */
 }
 
         .month-button-container {
@@ -335,8 +342,13 @@
             cursor: pointer;
         }
 
-        .month-button:hover {
-    background-color: #583962; /* ホバーで黒にチェンジ🖤 */
+        .week-button:hover {
+    background-color: #583962;
+    transform: scale(1.15); /* ドーン！ってくらい拡大🔥 */
+}
+
+.week-button:active {
+    transform: scale(0.95); /* クリックした瞬間にギュッと縮む💥 */
 }
 
         .current-month {
