--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@
             cursor: pointer;
         }
 
-        .week-button:hover {
+        .month-button:hover {
     background-color: #583962;
     transform: scale(1.15); /* ドーン！ってくらい拡大🔥 */
 }
 
-.week-button:active {
+.month-button:active {
     transform: scale(0.95); /* クリックした瞬間にギュッと縮む💥 */
 }
 
