--- a/index.html
+++ b/index.html
@@ -1292,40 +1292,28 @@ function submitForm() {
         message: document.getElementById('message').value.trim()
     };
 
-    // 入力チェック
-    if (!formData.name) {
-        alert('お名前を入力してください。');
-        return;
-    }
-    if (!formData.phone) {
-        alert('電話番号を入力してください。');
-        return;
-    }
-    if (!formData.selectedSymptom) {
-        alert('メニューを選択してください。');
-        return;
-    }
-    if (!formData.dates) {
-        alert('希望日時を選択してください。');
+    if (!formData.name || !formData.phone || !formData.selectedSymptom || !formData.dates) {
+        alert('すべての必須項目を入力してください。');
         return;
     }
 
-    // fetchで送信
-    fetch('https://script.google.com/macros/s/AKfycbw3feq9rg3LU08CvHqQiUXGjL5ORrZUaUkfOZI3vhTOiQSdqxytX8PEF2_1d8vrG2rZ/exec', { // ← デプロイ時に発行されるURLに差し替えてください
+    // WebアプリURLにPOST
+    fetch('https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxPbG57kNDQqwSpG3-TZylPYzi6yllq0fl3d_D3umRb97qujz70bIzzUV1mpqmNmkkd/exec/exec', {
         method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(formData)
+        body: JSON.stringify(formData),
+        headers: { 'Content-Type': 'application/json' }
     })
-    .then(response => response.text())
-    .then(result => {
-        alert(result); // 成功メッセージを表示
-        // 必要に応じてフォームリセットなど
+    .then(response => response.json())
+    .then(data => {
+        if (data.result === 'success') {
+            alert('ご予約が完了しました。ありがとうございました！');
+        } else {
+            alert('送信エラー: ' + data.error);
+        }
     })
-    .catch(error => {
-        console.error('送信エラー:', error);
-        alert('送信中にエラーが発生しました');
+    .catch(err => {
+        console.error('送信エラー:', err);
+        alert('送信に失敗しました。もう一度お試しください。');
     });
 }
 
